<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res/android">

    <string name="app_name">iSAS</string>
    <string name="action_settings">Settings</string>
    <string name="marks">Marks</string>
    <string name="substitution">Substitution</string>
    <string name="timetable">Timetable</string>
    <string name="moodle">Moodle</string>
    <string name="canteen">Canteen</string>
    <string name="website">School website</string>
    <string name="backward">Back</string>
    <string name="forward">Forward</string>
    <string name="open">Open in browser</string>
    <string name="refresh">Refresh</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="action">Sign in</string>
    <string name="sign_in_to">Sign in to <xliff:g id="hostname">%s1</xliff:g> \"<xliff:g id="realm">%s2</xliff:g>\"</string>
    <string name="class_dialog_title">Set class…</string>
    <string name="my_class">My class</string>
    <string name="other_class">Other class</string>
    <string name="today">Today</string>
    <string name="nextDay">Next day</string>
    <string name="open_preference_title">Enable browser opening</string>
    <string name="general_group_title">General</string>
    <string name="open_preference_summary">Enable to open pages directly in your browser</string>
    <string name="about_group_title">About app</string>
    <string name="author_preference_title">Author</string>
    <string name="version_preference_title">App version</string>
    <string name="source_label">Source code</string>
    <string name="libs_label">Used libraries</string>
    <string name="change_class_title">Change class</string>
    <string name="change_class_summary">Click to choose different class as default</string>
    <string name="teacher_button_text">Teachers</string>
    <string name="teacher_dialog_title">Set teacher...</string>

</resources>
